--- a/nodeflair_assessment/src/App.css
+++ b/nodeflair_assessment/src/App.css
@@ -52,7 +52,9 @@ body {
   padding: 15px 0px 5px 0px;
   margin: 0;
 }
-
+* {
+  transition: all 0.5s ease-in-out;
+}
 .cardGrid:hover {
   padding: 5px 0px 15px 0px;
 }
@@ -63,6 +65,7 @@ body {
 .cardContainer {
   width: fit-content;
   height: auto;
+  margin: 0px 5px 0px 0px;
 }
 
 .jobListingCard {
@@ -224,7 +227,9 @@ body {
 .jobDetailsContainer {
   display: block;
   flex: 9;
-  height: auto;
+  position: sticky;
+  top: 5%;
+  height: 100vh;
   margin: 15px 10px;
   padding: 29px 20px;
   border-radius: 10px;
