--- a/nodeflair_assessment/src/App.css
+++ b/nodeflair_assessment/src/App.css
@@ -51,6 +51,7 @@ body {
   width: inherit;
   padding: 15px 0px 5px 0px;
   margin: 0;
+  cursor: pointer;
 }
 * {
   transition: all 0.5s ease-in-out;
