--- a/nodeflair_assessment/src/App.css
+++ b/nodeflair_assessment/src/App.css
@@ -226,8 +226,8 @@ body {
 
 /* styling for right side container of detailed job information */
 .jobDetailsContainer {
-  display: block;
-  flex-direction: row;
+  display: flex;
+  flex-direction: column;
   flex: 9;
   position: sticky;
   top: 5%;
